css/main.css
/* ... */
main {
    background:white;
}

.logo {
    background:#000;
}
.icons {
  background:#212121;
}

.patreon-section {
    background:#212121;
    color:#bdbdbd;
}
.patreon-section a {
    color:white;
    text-decoration:none;
}
.patreon-link {
    border-bottom:3px solid #00AEA8;
}

.instagram-section {
    background:#bdbdbd;
}
.instagram-section a {
    color:white;
}

.soundcloud-section {
    background:#f5f5f5;
}
.soundcloud-section a { color:#424242; }

.youtube-section {
    background:#616161;
    color:white;
}
.youtube-section a { color:#f5f5f5; }

.track-section {
    background:#212121;
    color:#bdbdbd;
}
.track-form a {
    color:white;
}

body > footer {
    background:#bdbdbd;
    color:white;
}



/* ==========================================================================
   Other styles
   ========================================================================== */

.bandsintown-button {
    display:block;
    text-align:center;
    color:#FFF;
    background:#00AEA8;
    padding:6px;
}
.bandsintown-button a {
    color:#FFF;
    text-decoration:none;
}
.bandsintown-button svg {
    width:1.5rem;
    padding-bottom:0.3rem;
}

.email-padding {
  margin:0 20px;
  max-width:400px;
}
.email-padding img {
  width:100%;
}

/* Show soundcloud iframe (loaded from script) at maximum width */

iframe.soundcloud {
  width:100%;
}

/* Hide Bands In Town (generated by their script) when no upcoming dates */
.bit-no-dates-container { display:none; }


/* Special hover tooltip-like display over social icons */
.icons a {
    position:relative;
}
.icons a:after{
    padding:0 5px;
    font-size:80%;
    background:#fff;
    color:#000;
    border-radius:5px;
    box-shadow:0 0 8px 8px #FFF;
    line-height:1;

    content:attr(data-title);
    position:absolute;
    left:10%;
    bottom:8px;
    text-align:center;
    display:block;
    z-index:99;

    opacity:0; /* Invisible until hovered */
    transition:opacity .3s ease-in-out;
}
.icons a:hover:after{
    opacity:0.75;
}
.icons a:last-child:after {
  right:15%;  /* plenty of room for shadow effect to not overflow the container on phone */
  left:auto;
}

.no-js .requires-js {
  display:none;
}
.js .js-required {
  display:none;
}
.no-js .js-required {
  padding:0.5rem 1rem;
  margin:0;
  color:purple;
  background:#f5f5f5;
}

.browserupgrade { /* Improve the formatting a bit without messing with original */
  font-size:150%;
  padding:1rem;
}







/* ===== BREAKPOINTS … general (under 600 for mobile, 600+ for desktop) and specialized ===== */

@media only screen and (max-width:599px) {

    /* Bigger social media icons on mobile ... 5-up when we have the 10 icons */
    .icons a {
        width:20%;
    }

    /* ... and 6-up without margins where we have the 6 icons */
    .popular.icons a {
        width:16.66%;
    }
    .popular.icons a:first-child {
        margin-left:0;
    }

    /* On mobile, center photo rather than side-by-side with mailing list form */
    .track-photo {
        margin-left:25%;
        width:50%;
    }

    /* On mobile, avoid left/right margin on some sections (except for their headers/footers which are textual) */

    .maximize-mobile {
        padding-left:0;
        padding-right:0;
    }
    .maximize-mobile footer, .maximize-mobile header {
        padding-left:1rem;
        padding-right:1rem;
    }
}

@media only screen and (min-width:600px) {

    /* If wide enough, show button inline with text rather than 100% wide */

    .bandsintown-button {
        display:inline;
        margin-right:0.3rem;
    }

    /* Two YouTube videos side by side */

    .youtube-column {
        width:50%;
        float:left;
    }

    /* On wide screens, put photo to left of the 'track' form */

    .track-photo {
        float:left;
        width:33%;
    }
    .track-form {
        float:left;
        width:66%;
    }
}

@media only screen and (min-width:800px) {

    /* Wider screens, show patreon as a distinct button */

    .patreon-button {
        border:1px solid white;
        padding:0.5rem;
        background:#424242;
    }
    .patreon-link {
        border-bottom:none;
    }

    /* Wider screens, there is room for 3 SoundClouds side by side. */

    .soundcloud-column {
        width:33%;
        float:left;
    }
}

